# Fitness-and-Precision-for-OCPM-in-Rust

./: Cargo.toml
src/: context.rs  enabled_log_act.rs  enabled_model_act.rs  evaluator.rs  main.rs  structs_for_ocpm.rs  types_for_ocpm.rs  utils.rs
src/test/: mod.rs  ocel2.xml  vis.dot
src/test/Expected results (running example)/: bindings.ron  context_map.ron  contexts.ron  enabled_log_activities.ron  enabled_model_activities.ron  presets.ron
